<resources>
    <string name="app_name">Triple E</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ilyasa_nur_">Ilyasa Nur Haafiz</string>
    <string name="about_mysel">About Myself</string>
    <string name="personal_information">Personal Information</string>
    <string name="birthdate">Birthdate</string>
    <string name="add">Tambah</string>
    <string name="detail">Detail</string>
    <string name="ticket">TICKET</string>
    <string name="technician">Technician</string>
    <string name="dashboard">Dashboard</string>
    <string name="message">Message</string>
    <string name="setting">Settings</string>
    <string name="activity">Activity</string>
    <string name="change_password">Change Password</string>
    <string name="change_log">Change Log</string>
    <string name="maps">MAPS</string>
    <string name="logout">Logout</string>
    <string name="all">ALl</string>
    <string-array name="Spinner_Items">
        <item>TT Site All</item>
        <item>TT Map Me</item>
        <item>TT Map All</item>
    </string-array>
    <string-array name="Spinner_Items_Severity">
        <item>Major</item>
        <item>Minor</item>
        <item>Critical</item>
        <item>Low</item>
    </string-array>
    <string name="title_overview">Overview</string>
    <string name="title_site">Site</string>
    <string name="title_work">Work</string>
    <string name="title_education">Education</string>
    <string name="title_basic_info">Basic Info</string>
    <string name="title_skill">Skills</string>
    <string name="full_name">Full Name</string>
    <string name="position">Position <font color='red'>*</font></string>
    <string name="position_basic_info">Position</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="joint">Joint</string>
    <string name="nik">Nik</string>
    <string name="bpjs">BPJS</string>
    <string name="add_workplace">Add A Workplace</string>
    <string name="logo_triple_e">Logo Triple E</string>
    <string name="edit_me">Edit Me</string>
    <string name="image_me">Image Me</string>
    <string name="bg_header_me">Background Header Me</string>
    <string name="trouble_ticket">Trouble Ticket</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="search">Search</string>
    <string name="assigned">Assigned</string>
    <string name="account_setting">Account Setting</string>
    <string name="email_me_when_my_expense_claim_paid">Email me when my expense claim paid</string>
    <string name="email_me_when_my_cash_advance_approved_or_rejected">Email me when my cash advance\napproved or rejected</string>
    <string name="send_me_email_any_updated_about_artificial_watson">Send me email any updated about\nArtificial Watson</string>
    <string name="activate_my_second_email_to_receive_email_from_artificial_watson">Activate my second email to receive\nemail from Artificial Watson</string>
    <string name="send_me_email_when_new_assignment_created_for_me">Send me email when new Assignment\ncreated for me</string>
    <string name="receive_an_email_when_new_trouble_ticket_assign_to_me">Receive an email when new Trouble Ticket\nassign to me</string>
    <string name="email_me_with_my_trouble_ticket_closed">Email me with my trouble ticket closed</string>
    <string name="old_password">Old Password</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="changed_items">Changed Items</string>
    <string name="welcome_to_artificial_watson">Welcome To Artificial Watson</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_up"><b>Sign Up</b><font color='black'>, If you have no Account.</font></string>
    <string name="if_you_have_no_account">If you have no Account.</string>
    <string name="only_registration_with_valid_name_email_mobile_phone_and_birth_date_will_be_approved">Only registration with valid name, email, \nmobile phone and birth date will be \napproved!</string>
    <string name="email_triple_e_id_if_you_have">Email (@triple-e.id if you have)</string>
    <string name="mobile">Mobile</string>
    <string name="birthdate_">Birth Date</string>
    <string name="retype_password">Retype Password</string>
    <string name="if_you_already_have_an_account">, if you already have an account.</string>
    <string name="triple_e_id">triple-e.id</string>
    <string name="triple_e">App Triple-E</string>
    <string name="new_ticket">New Ticket</string>
    <string name="ticket_number_command_center">Ticket Number Command Center <font color='red'>*</font></string>
    <string name="ticket_number_inap">Ticket Number INAP <font color='red'>*</font></string>
    <string name="ticket_number_assigned">Ticket Number Assigned</string>
    <string name="ticket_number_swfm">Ticket Number SWFM</string>
    <string name="ticket_number_assigned_edit">Ticket Number Assigned <font color='red'>*</font></string>
    <string name="asign_to">Assign to <font color='red'>*</font></string>
    <string name="severity">Severity <font color='red'>*</font></string>
    <string name="ticket_type">Ticket Type <font color='red'>*</font></string>
    <string name="field_engineer">Field Engineer</string>
    <string name="field_engineer_edit">Field Engineer <font color='red'>*</font></string>
    <string name="site_id_site_name">Site ID - Site Name</string>
    <string name="site_id_site_name_add">Site ID - Site Name</string>
    <string name="tower_provider">Tower</string>
    <string name="area_ns_region">Area (NS Region)</string>
    <string name="area_ns_region_add">Area (NS Region)</string>
    <string name="triple_e_in_charge">Triple-E In Charge <font color='red'>*</font></string>
    <string name="studied_at"><font color='black'>Studied at</font></string>
    <string name="add_notes">Add Notes <font color='red'>*</font></string>
    <string name="status">Status <font color='red'>*</font></string>
    <string name="reason_pending">Reason Pending <font color='red'>*</font></string>
    <string name="all_folllow_up_status">All Follow Up Status <font color='red'>*</font></string>
    <string name="severety">Severety <font color='red'>*</font></string>
    <string name="request_spare_part">Request Spare Part</string>
    <string name="resolution_accepted_by_triple_e">Resolution accepted by Triple-E</string>
    <string name="closed_ticket_at_command_center">Closed ticket @ Command Center</string>
    <string name="upload_file">Upload File</string>
    <string name="choose_file">Choose File</string>
    <string name="submit">Submit</string>
    <string name="select_site">Select Site</string>
    <string name="the_information_below_will_be_treated_confidentially">The information below will be treated confidentially</string>
    <string name="add_a_collage">Add A College</string>
    <string name="verify_your_phone_number">Verify your \nphone number</string>
    <string name="we_have_send_you_an_on_this_mobile_number">We have send you an \non this mobile number.</string>
    <string name="return_form">Return Form</string>
    <string name="site_info">Site Info</string>
    <string name="history">History</string>
    <string name="return_spare_part">Return Spare Part</string>
    <string name="_01_september_2017_01_september_2021_information_system">01 September 2017 – 01 September 2021 \nInformation System</string>
    <string name="notification">Notification</string>
    <string name="Inbox">Inbox</string>
    <string name="detail_ticket">Detail Ticket #%1$s</string>
    <string name="timeline">TIMELINE</string>
    <string name="RCA">RCA</string>
    <string name="log">LOG</string>
    <string name="sp_handling">SP Handling</string>
    <string name="you_are_still_missing_the_following_email_alternative_nik_ktp_npwp_number_bpjs_number_bpjs_kesehatan_description_about_yourself_minimum_150_characters_city_or_town_of_your_location_cv_at_least_100_character_required_to_describe_about_your_work_experience_to_make_your_profile_100_completed">You are still missing the following: email alternative, NIK, KTP, NPWP number, BPJS number, BPJS Kesehatan, description about yourself minimum 150 characters, city or town of your location, CV, at least 100 character required to describe about your work experience, to make your profile 100% completed!</string>
    <string name="my_open_ticket">My Open Ticket</string>
    <string name="open_ticket_area">Open Ticket Area</string>
    <string name="my_ticket_handling_contribution">My Ticket Handling Contribution</string>
    <string name="skill">Skill</string>
    <string name="installation">Installation</string>
    <string name="commissioning">Commissioning</string>
    <string name="integration">Integration</string>
    <string name="project">Project</string>
    <string name="business">Business</string>
    <string name="my_closed_ticket">My Closed Ticket</string>
    <string name="competence_development_status">Competence Development Status</string>
    <string name="program">Program</string>
    <string name="progress_2023">Progress 2023</string>
    <string name="your_activity">Your Activity</string>
    <string name="your_activity_description">You have spent %1$s hours and %2$s minutes working with Watson for last %3$s days</string>
    <string name="chronoly_of_this_ticket_based_on_notes_from_from_usesrs">Chronoly of this ticket based on notes from users</string>
    <string name="chronoly_of_this_ticket_based_on_notes_from_from_users_in_this_cluster">Ticket chronology based on notes from users</string>
    <string name="active_users">Active Users</string>
    <string name="profile">Profile</string>
    <string name="last_login">Last Login</string>
    <string name="view_all"><u>View All</u></string>
    <string name="tt_dashboard">Trouble Ticket Dashboard</string>
    <string name="team_dashboard">Team Dashboard</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="percentage_number_of_tickets_handled_by_me_towards_all_tickets_in_my_area">Percentage number of tickets handled by me towards all tickets in my area.</string>
    <string name="closed_ticket_area">Closed Ticket Area</string>
    <string name="registered_users">Registered Users</string>
    <string name="internal_users">Internal Users</string>
    <string name="external_users">External Users</string>
    <string name="usage_trend">Usage Trend</string>
    <string name="based_on_number_of_login">Based on number of login</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="daily">Daily</string>
    <string name="system">System</string>
    <string name="article_name">Article Name <font color='red'>*</font></string>
    <string name="article_code">Article Code <font color='red'>*</font></string>
    <string name="quantity">Quantity <font color='red'>*</font></string>
    <string name="serial_number">Serial Number</string>
    <string name="one_time_password_otp">One Time Password(OTP)</string>
    <string name="enter_mobile_no">Enter mobile no.*</string>
    <string name="last_update">Last Update</string>
    <string name="id">ID #%1$s</string>
    <string name="ticket_title">Ticket</string>
    <string name="follow_up">Follow Up</string>
    <string name="created">Created</string>
    <string name="treatment">Treatment</string>
    <string name="vendor">Vendor</string>
    <string name="faulty_unit">Faulty Unit</string>
    <string name="s_n_sparepart">S/N Sparepart</string>
    <string name="s_n_fauty_unit">S/N Fauty Unit <font color='red'>*</font></string>
    <string name="area_acces">Area Acces</string>
</resources>