<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <id.co.dif.base_project.custom_view.LinearLayoutWithAppBar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:title="Request / Return Spare Part"
        app:backButtonIcon="@drawable/baseline_arrow_back_ios_new_24">


        <TextView
            android:id="@+id/error_sparepart_message"
            style="@style/Form.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="Sparepart not found"
            android:textColor="@color/red"
            android:visibility="gone" />

        <TextView
            style="@style/Form.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article_name" />

        <AutoCompleteTextView
            android:id="@+id/article_name"
            style="@style/Form.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <TextView
            style="@style/Form.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or" />

        <TextView
            style="@style/Form.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article_code" />

        <AutoCompleteTextView
            android:id="@+id/article_code"
            style="@style/Form.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <TextView
            style="@style/Form.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity" />

        <EditText
            android:id="@+id/quantity"
            style="@style/Form.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:validateEmpty="@{true}"
            android:imeOptions="actionNext"
            android:inputType="number" />

        <TextView
            style="@style/Form.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_n_sparepart" />

        <EditText
            android:id="@+id/sn_sparepart"
            style="@style/Form.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <TextView
            style="@style/Form.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_n_fauty_unit" />

        <EditText
            android:id="@+id/sn_fauty_unit"
            style="@style/Form.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="12dp"
            app:validateEmpty="@{true}"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <Button
            android:id="@+id/save"
            style="@style/Form.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </id.co.dif.base_project.custom_view.LinearLayoutWithAppBar>
</layout>
