<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <id.co.dif.base_project.custom_view.LinearLayoutWithAppBar
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:backButtonIcon="@drawable/baseline_arrow_back_ios_new_24"
        app:title="@string/setting">


        <TextView
            android:id="@+id/areaaccesteleglobal"
            style="@style/account_set"
            android:includeFontPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:text="@string/area_acces"
            app:drawableEndCompat="@drawable/ic_panah" />

        <TextView
            android:id="@+id/project"
            style="@style/account_set"
            android:includeFontPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:text="Project"
            app:drawableEndCompat="@drawable/ic_panah" />

        <TextView
            android:id="@+id/tx_account_setting"
            style="@style/account_set"
            android:includeFontPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:text="@string/account_setting"
            app:drawableEndCompat="@drawable/ic_panah" />

        <TextView
            android:id="@+id/tx_activity"
            style="@style/account_set"
            android:includeFontPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:text="@string/activity"
            app:drawableEndCompat="@drawable/ic_panah" />

        <TextView
            android:id="@+id/tx_change_pw"
            style="@style/change_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:text="@string/change_password"
            app:drawableEndCompat="@drawable/ic_panah" />

        <TextView
            android:id="@+id/tx_change_log"
            style="@style/change_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"

            android:includeFontPadding="false"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:text="@string/change_log"
            app:drawableEndCompat="@drawable/ic_panah"
            android:visibility="gone" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            app:dividerColor="@color/purple" />

        <TextView
            android:id="@+id/id_logout"
            style="@style/logout"
            android:includeFontPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:text="@string/logout" />
    </id.co.dif.base_project.custom_view.LinearLayoutWithAppBar>
</layout>